[package]
name = "pal-sys"
version = "0.1.0"
authors = ["Derwent McElhinney <derwentx@gmail.com>"]
edition = "2018"
license = "MPL-2.0 AND LGPL-3.0-only"
description = "Crate for providing bindings to and linking Starlink's PAL C library."
links = "pal"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
static = ["autotools"]

[build-dependencies]
pkg-config = "0.3.*"
autotools = { version = "0", optional = true }
cc = { version = "1.0", features = ["parallel"] }
bindgen = "0.58.1"

[dev-dependencies]
criterion = "0.3.*"

[package.metadata.docs.rs]
features = ["static"]
targets = ["x86_64-unknown-linux-gnu", "x86_64-apple-darwin"]

[dependencies]
